<?xml version="1.0"?>
<package format="3">
  <name>moveit_resources_panda_moveit_config</name>
  <version>3.1.1</version>
  <description>
    <p>
      MoveIt Resources for testing: Franka Emika Panda
    </p>
    <p>
      A project-internal configuration for testing in MoveIt.
    </p>
  </description>
  <author email="mike@picknik.ai">Mike Lautman</author>
  <maintainer email="mike@picknik.ai">Mike Lautman</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_resources/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_resources</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_resources_panda_description</exec_depend>
  <!-- disabled to remove circular dependencies
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  -->
  <exec_depend>ros2cli_common_extensions</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <!-- Gripper controller package was renamed in Jazzy:
       https://github.com/ros-controls/ros2_controllers/pull/1913
       removed position_controllers in favor of forward_command_controller +
       parallel_gripper_action_controller (the latter lives in the
       parallel_gripper_controller package). The position_controllers package
       still exists on Humble/Iron; parallel_gripper_controller is only on
       Jazzy and newer. -->
  <exec_depend condition="$ROS_DISTRO == 'humble' or $ROS_DISTRO == 'iron'">position_controllers</exec_depend>
  <exec_depend condition="$ROS_DISTRO != 'humble' and $ROS_DISTRO != 'iron'">parallel_gripper_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment.
       Commented the dependency until this works. -->
  <!-- <exec_depend>warehouse_ros_mongo</exec_depend> -->

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
